--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@zackyy1/vun-ui": "^1.1.7",
+    "@zackyy1/vun-ui": "^1.1.8",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
